--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
 
     <string name="app_name">NorikaAndroidLibrary</string>
+    <string name="no_network_connection_toast">No network connection found</string>
 
 </resources>
