--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -6,6 +6,7 @@
     <string name="no_network_connection_toast_lan">无效的网络</string>
     <string name="cancel_lan">取消</string>
     <string name="confirm_lan">确认</string>
+    <string name="loading_lan">加载中....</string>
     <!-- beauty dialog -->
     <string name="dialog_prompt_lan">提示</string>
     <string name="dialog_prompt_hint_lan">提示详情</string>
